force-app/main/default/objects/cpm__Bank_Feed_Authorization_Account__c/cpm__Bank_Feed_Authorization_Account__c.object-meta.xml
<CustomObject>
    <label>Bank Feed Authorization Account</label>
    <nameField>
        <displayFormat>BFA-{00000000}</displayFormat>
        <label>Bank Feed Authorization Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Feed Authorization Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>