force-app/main/default/objects/cpm__Bank_Feed_Authorization_Account__c/fields/cpm__Account_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Account_Id__c</fullName>
    <description>The reference to the bank account / IBAN as stored by the AISP.</description>
    <externalId>true</externalId>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>