force-app/main/default/objects/cpm__Bank_Feed_Authorization_Account__c/fields/cpm__Authorization_Status__c.field-meta.xml
<CustomField>
    <fullName>cpm__Authorization_Status__c</fullName>
    <description>The status of the authorization for this account connection.</description>
    <formula>TEXT(cpm__Bank_Feed_Authorization__r.cpm__Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>