force-app/main/default/objects/cpm__Bank_Feed_Authorization_Account__c/fields/cpm__Bank_Feed_Account__c.field-meta.xml
<CustomField>
    <fullName>cpm__Bank_Feed_Account__c</fullName>
    <description>The Bank Account record this authorization is for.</description>
    <label>Bank Feed Account</label>
    <referenceTo>cpm__Bank_Account__c</referenceTo>
    <relationshipLabel>Bank Feed Authorization Accounts</relationshipLabel>
    <relationshipName>Bank_Feed_Authorization_Accounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>