force-app/main/default/objects/cpm__Bank_Feed_Authorization_Account__c/fields/cpm__Bank_Feed_Authorization__c.field-meta.xml
<CustomField>
    <fullName>cpm__Bank_Feed_Authorization__c</fullName>
    <description>The Authorization record for the bank account.</description>
    <label>Bank Feed Authorization</label>
    <referenceTo>cpm__Bank_Feed_Authorization__c</referenceTo>
    <relationshipLabel>Bank Feed Authorization Accounts</relationshipLabel>
    <relationshipName>Bank_Feed_Authorization_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>