force-app/main/default/objects/cpm__Bank_Feed_Authorization_Account__c/fields/cpm__Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Resource_Id__c</fullName>
    <description>The agreement id of the authorization.</description>
    <externalId>true</externalId>
    <label>Resource Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>